Added slack and github icons on main page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&display=swap" rel="stylesheet">
   <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css">
   <link rel="stylesheet" href="css/loadingAnimation.css">
   <link rel="stylesheet" href="css/bootstrap/open-iconic-bootstrap.min.css">
   <link rel="stylesheet" href="css/libraries/animate.css">
@@ -82,7 +82,7 @@
       <a class="navbar-brand" href="index.html">OSDFS</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
         aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="oi oi-menu"></span> Menu
+        <span class="fa fa-bars"></span> Menu
       </button>
 
       <div class="collapse navbar-collapse" id="ftco-nav">
@@ -105,11 +105,24 @@
     data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
-      <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center"
-        data-scrollax-parent="true">
-        <div class="col-md-12 text ftco-animate mt-5 text-center" data-scrollax=" properties: { translateY: '70%' }">
-          <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Open Source Digital Freedom
+      <div class="row no-gutters slider-text js-fullheight" data-scrollax-parent="true">
+        <div class="col-md-12 text ftco-animate mt-5 text-center align-items-center justify-content-center" data-scrollax=" properties: { translateY: '70%' }">
+          <h1 class="pt-5 pb-3 mt-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Open Source Digital Freedom
             Society</h1>
+        </div>
+        <div class="col-md-2"></div>
+        <div class="pb-5 mb-5 col-md-3">
+          <a href="#" type="button" class="btn btn-default btn-block" target="_blank" rel="noopener noreferrer"
+          data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
+            <i class="fab fa-slack fa-2x"></i>
+          </a>
+        </div>
+        <div class="col-md-2"></div>
+        <div class="pb-5 mb-5 col-md-3">
+          <a href="#" type="button" class="btn btn-dark btn-block" target="_blank" rel="noopener noreferrer"
+          data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
         </div>
       </div>
     </div>
