--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,7 @@
 
           <li class="nav-item"><a href="partners.html" class="nav-link">Partners</a></li>
           <li class="nav-item"><a href="events.html" class="nav-link">Events</a></li>
-          <li class="nav-item"><a href="oppertunities.html" class="nav-link">Opportunities</a></li>
+          <li class="nav-item"><a href="opportunities.html" class="nav-link">Opportunities</a></li>
           <li class="nav-item active"><a href="gallery.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -148,7 +148,7 @@
             <ul class="list-unstyled">
               <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
               <li><a href="events.html" class="py-2 d-block">Events</a></li>
-              <li><a href="https://github.com/osDFS/Code-of-Conduct/blob/master/code-of-conduct.md" target="_blank"
+              <li><a href="https://osdfs.gitbook.io/code-of-conduct/" target="_blank"
                   rel="noopener" class="py-2 d-block">Code of Conduct</a></li>
             </ul>
           </div>
