--- a/opportunities.html
+++ b/opportunities.html
@@ -58,7 +58,7 @@
 
           <li class="nav-item"><a href="partners.html" class="nav-link">Partners</a></li>
           <li class="nav-item"><a href="events.html" class="nav-link">Events</a></li>
-          <li class="nav-item active"><a href="oppertunities.html" class="nav-link">Opportunities</a></li>
+          <li class="nav-item active"><a href="opportunities.html" class="nav-link">Opportunities</a></li>
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -77,7 +77,7 @@
         <div class="col-md-9 ftco-animate pb-5 text-center">
           <h2 class="mb-3 bread">Participate in osDFS's new technical interview challenges!</h2>
           <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
-                  class="ion-ios-arrow-forward"></i></a></span> <span>Oppertunities<i
+                  class="ion-ios-arrow-forward"></i></a></span> <span>opportunities<i
                 class="ion-ios-arrow-forward"></i></span></p>
         </div>
       </div>
@@ -127,7 +127,7 @@
             <ul class="list-unstyled">
               <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
               <li><a href="events.html" class="py-2 d-block">Events</a></li>
-              <li><a href="https://github.com/osDFS/Code-of-Conduct/blob/master/code-of-conduct.md" target="_blank"
+              <li><a href="https://osdfs.gitbook.io/code-of-conduct/" target="_blank"
                   rel="noopener" class="py-2 d-block">Code of Conduct</a></li>
             </ul>
           </div>
