--- a/index.html
+++ b/index.html
@@ -45,37 +45,37 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-  <!-- Loading Animation -->
-  <div id="loaderAnim">
-    <div class="boxes">
-      <div class="box">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="box">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="box">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="box">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
+<!-- Loading Animation -->
+<div id="loaderAnim">
+  <div class="boxes">
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
   </div>
-  <!--End loading Animation-->
-  
+</div>
+<!--End loading Animation-->
+
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container-fluid px-lg-5">
@@ -119,14 +119,14 @@
     <div class="container-fluid px-md-0">
       <div class="row no-gutters">
         <div class="col-md-6 img-volunteer">
-          <div class="row no-gutters justify-content-start">
+          <div class="row no-gutters justify-content-center">
             <div class="col-lg-7">
               <div class="text py-5 pl-md-4 pr-md-3">
                 <h2 class="mb-4">OSDFS</h2>
                 <p>A special interest group that supports women and men who study or are interested in Computer and
                   Information Science.</p>
-                <p><a href="JoiningForm.html"
-                    target="_blank" rel="noopener" class="btn btn-primary py-3 px-4">Join now</a></p>
+                <p class="text-center"><a href="JoiningForm.html" target="_blank" rel="noopener"
+                    class="btn btn-primary py-3 px-4">Join now</a></p>
               </div>
             </div>
           </div>
@@ -206,8 +206,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-10 heading-section text-center ftco-animate">
-          <h2 class="mb-0"><a href="JoiningForm.html"
-              target="_blank" rel="noopener">Join Us</a></h2>
+          <h2 class="mb-0"><a href="JoiningForm.html" target="_blank" rel="noopener">Join Us</a></h2>
         </div>
       </div>
     </div>
@@ -227,7 +226,8 @@
             <div class="icon"><span class="flaticon-open-book"></span></div>
             <div class="media-body">
               <h3 class="heading mb-3">YouthIcon</h3>
-              <p>Let's put India on NLP map. YouthIcon as the name suggest will be a research effort for NLP for Indian languages that is LOW RESOURCED, OPEN SOURCE, CONTRY-WIDE, DISTRIBUTED and ONLINE. </p>
+              <p>Let's put India on NLP map. YouthIcon as the name suggest will be a research effort for NLP for Indian
+                languages that is LOW RESOURCED, OPEN SOURCE, CONTRY-WIDE, DISTRIBUTED and ONLINE. </p>
               <p><a href="https://github.com/osDFS/YouthIcon" target="_blank" rel="noopener"
                   class="btn btn-primary py-3 px-4">Join</a></p>
             </div>
@@ -364,8 +364,8 @@
             <ul class="list-unstyled">
               <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
               <li><a href="events.html" class="py-2 d-block">Events</a></li>
-              <li><a href="https://osdfs.gitbook.io/code-of-conduct/" target="_blank"
-                  rel="noopener" class="py-2 d-block">Code of Conduct</a></li>
+              <li><a href="https://osdfs.gitbook.io/code-of-conduct/" target="_blank" rel="noopener"
+                  class="py-2 d-block">Code of Conduct</a></li>
             </ul>
           </div>
         </div>
@@ -409,7 +409,7 @@
   <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button">
     <i class="fa fa-chevron-up"></i>
   </a>
-  
+
 
 
 
