--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&display=swap" rel="stylesheet">
   <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/loadingAnimation.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css" integrity="sha512-3PN6gfRNZEX4YFyz+sIyTF6pGlQiryJu9NlGhu9LrLMQ7eDjNgudQoFDK3WSNAayeIKc6B8WXXpo4a7HqxjKwg==" crossorigin="anonymous" />  <link rel="stylesheet" href="css/loadingAnimation.css">
   <link rel="stylesheet" href="css/bootstrap/open-iconic-bootstrap.min.css">
   <link rel="stylesheet" href="css/libraries/animate.css">
 
@@ -32,15 +31,10 @@
   <link rel="stylesheet" href="css/libraries/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
 
-  <link rel="stylesheet" href="css/aos.css">
-
   <link rel="stylesheet" href="css/ionicons.min.css">
 
-  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="css/jquery.timepicker.css">
 
-
-  <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/icomoon.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -82,7 +76,7 @@
       <a class="navbar-brand" href="index.html">OSDFS</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
         aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="oi oi-menu"></span> Menu
+        <span class="fas fa-bars"></span> Menu
       </button>
 
       <div class="collapse navbar-collapse" id="ftco-nav">
@@ -106,10 +100,29 @@
     <div class="overlay"></div>
     <div class="container">
       <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center"
-        data-scrollax-parent="true">
-        <div class="col-md-12 text ftco-animate mt-5 text-center" data-scrollax=" properties: { translateY: '70%' }">
-          <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Open Source Digital Freedom
+      data-scrollax-parent="true">
+        <div class="col-md-12 text ftco-animate mt-5 pt-5 text-center" data-scrollax=" properties: { translateY: '70%' }">
+          <h1 data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Open Source Digital Freedom
             Society</h1>
+        </div>
+        <div class="social-icons col-sm-3 col-md-3" 
+        data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
+          <a href="#" target="_blank" rel="noopener noreferrer"
+          data-scrollax=" properties: { translateY: '70%' }">
+            <button class="btn btn-primary btn-block">
+              <i class="fab fa-slack fa-2x icons"></i>
+            </button>
+          </a>
+        </div>
+        <div class="col-sm-3 col-md-3"></div>
+        <div class="social-icons col-sm-3 col-md-3"
+        data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
+          <a href="#" target="_blank" rel="noopener noreferrer"
+          data-scrollax=" properties: { translateY: '70%' }">
+            <button class="btn btn-dark btn-block">
+              <i class="fab fa-github fa-2x icons"></i>
+            </button>
+          </a>
         </div>
       </div>
     </div>
@@ -274,7 +287,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="causes causes-2 text-center ftco-animate">
-            <div class="img" style="background-image: url(images/partners/p1.png);"></div>
+            <div class="img img-fluid rounded-circle" style="background-image: url(images/partners/p1.png); width: 310px"></div>
             <h2>Girls who code</h2>
 
 
@@ -282,7 +295,7 @@
         </div>
         <div class="col-md-6">
           <div class="causes causes-2 text-center ftco-animate">
-            <div class="img" style="background-image: url(images/partners/p2.jpg);"></div>
+            <div class="img img-fluid rounded-circle" style="background-image: url(images/partners/p2.jpg); width: 310px;"></div>
             <h2>Developer Circle Mosco From Facebook</h2>
 
 
@@ -407,7 +420,7 @@
     </div>
   </footer>
   <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button">
-    <i class="fa fa-chevron-up"></i>
+    <i class="fas fa-arrow-up"></i>
   </a>
   
 
