--- a/index.html
+++ b/index.html
@@ -100,29 +100,10 @@
     <div class="overlay"></div>
     <div class="container">
       <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center"
-      data-scrollax-parent="true">
-        <div class="col-md-12 text ftco-animate mt-5 pt-5 text-center" data-scrollax=" properties: { translateY: '70%' }">
-          <h1 data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Open Source Digital Freedom
+        data-scrollax-parent="true">
+        <div class="col-md-12 text ftco-animate mt-5 text-center" data-scrollax=" properties: { translateY: '70%' }">
+          <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Open Source Digital Freedom
             Society</h1>
-        </div>
-        <div class="social-icons col-sm-3 col-md-3" 
-        data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
-          <a href="#" target="_blank" rel="noopener noreferrer"
-          data-scrollax=" properties: { translateY: '70%' }">
-            <button class="btn btn-primary btn-block">
-              <i class="fab fa-slack fa-2x icons"></i>
-            </button>
-          </a>
-        </div>
-        <div class="col-sm-3 col-md-3"></div>
-        <div class="social-icons col-sm-3 col-md-3"
-        data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
-          <a href="#" target="_blank" rel="noopener noreferrer"
-          data-scrollax=" properties: { translateY: '70%' }">
-            <button class="btn btn-dark btn-block">
-              <i class="fab fa-github fa-2x icons"></i>
-            </button>
-          </a>
         </div>
       </div>
     </div>
@@ -179,8 +160,8 @@
               <div class="icon"><span class="flaticon-adoption"></span></div>
               <div class="media-body">
                 <h3 class="heading mb-3">Your First PR</h3>
-                <p>Help you get started contributing to open source by showcasing great starter issues on Github and
-                  elsew</p>
+                <p>Help you get started contributing to open source by showcasing great starter issues on Github or
+                  elsewhere</p>
               </div>
             </div>
           </a>
@@ -273,15 +254,11 @@
     </div>
   </section>
 
-
-
-
   <section class="ftco-section ftco-causes">
     <div class="container">
       <div class="row justify-content-center pb-4">
         <div class="col-md-10 heading-section text-center ftco-animate">
           <h2 class="mb-4">Our Partners</h2>
-
         </div>
       </div>
       <div class="row">
@@ -289,21 +266,15 @@
           <div class="causes causes-2 text-center ftco-animate">
             <div class="img img-fluid rounded-circle" style="background-image: url(images/partners/p1.png); width: 310px"></div>
             <h2>Girls who code</h2>
-
-
           </div>
         </div>
         <div class="col-md-6">
           <div class="causes causes-2 text-center ftco-animate">
             <div class="img img-fluid rounded-circle" style="background-image: url(images/partners/p2.jpg); width: 310px;"></div>
             <h2>Developer Circle Mosco From Facebook</h2>
-
-
           </div>
         </div>
-
       </div>
-
     </div>
   </section>
 
@@ -368,6 +339,10 @@
                   rel="noopener"><span class="icon-facebook"></span></a></li>
               <li class="ftco-animate"><a href="https://www.instagram.com/osdfs1" target="_blank" rel="noopener"><span
                     class="icon-instagram"></span></a></li>
+              <li class="ftco-animate"><a href="#" target="_blank" rel="noopener"><span
+                    class="fab fa-slack"></span></a></li>
+              <li class="ftco-animate"><a href="#" target="_blank" rel="noopener"><span
+                    class="icon-github"></span></a></li>
             </ul>
           </div>
         </div>
