--- a/ccp.html
+++ b/ccp.html
@@ -22,6 +22,7 @@
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald:400,500,600,700&display=swap" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css" integrity="sha512-3PN6gfRNZEX4YFyz+sIyTF6pGlQiryJu9NlGhu9LrLMQ7eDjNgudQoFDK3WSNAayeIKc6B8WXXpo4a7HqxjKwg==" crossorigin="anonymous" />  <link rel="stylesheet" href="css/loadingAnimation.css">
   <link rel="stylesheet" href="css/bootstrap/open-iconic-bootstrap.min.css">
   <link rel="stylesheet" href="css/libraries/animate.css">
 
@@ -106,6 +107,10 @@
                   rel="noopener"><span class="icon-facebook"></span></a></li>
               <li class="ftco-animate"><a href="https://www.instagram.com/osdfs1" target="_blank" rel="noopener"><span
                     class="icon-instagram"></span></a></li>
+              <li class="ftco-animate"><a href="#" target="_blank" rel="noopener"><span
+                    class="fab fa-slack"></span></a></li>
+              <li class="ftco-animate"><a href="#" target="_blank" rel="noopener"><span
+                    class="icon-github"></span></a></li>
             </ul>
           </div>
         </div>
