--- a/community.html
+++ b/community.html
@@ -36,8 +36,7 @@
   <link rel="stylesheet" href="css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="css/jquery.timepicker.css">
 
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/scripts/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css" integrity="sha512-3PN6gfRNZEX4YFyz+sIyTF6pGlQiryJu9NlGhu9LrLMQ7eDjNgudQoFDK3WSNAayeIKc6B8WXXpo4a7HqxjKwg==" crossorigin="anonymous" />  <link rel="stylesheet" href="css/loadingAnimation.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/icomoon.css">
@@ -253,6 +252,10 @@
                   rel="noopener"><span class="icon-facebook"></span></a></li>
               <li class="ftco-animate"><a href="https://www.instagram.com/osdfs1" target="_blank" rel="noopener"><span
                     class="icon-instagram"></span></a></li>
+              <li class="ftco-animate"><a href="#" target="_blank" rel="noopener"><span
+                    class="fab fa-slack"></span></a></li>
+              <li class="ftco-animate"><a href="#" target="_blank" rel="noopener"><span
+                    class="icon-github"></span></a></li>
             </ul>
           </div>
         </div>
