--- a/partners.html
+++ b/partners.html
@@ -22,6 +22,7 @@
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald:400,500,600,700&display=swap" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css" integrity="sha512-3PN6gfRNZEX4YFyz+sIyTF6pGlQiryJu9NlGhu9LrLMQ7eDjNgudQoFDK3WSNAayeIKc6B8WXXpo4a7HqxjKwg==" crossorigin="anonymous" />  <link rel="stylesheet" href="css/loadingAnimation.css">
   <link rel="stylesheet" href="css/bootstrap/open-iconic-bootstrap.min.css">
   <link rel="stylesheet" href="css/libraries/animate.css">
 
@@ -86,31 +87,26 @@
 
   <section class="ftco-section ftco-causes">
     <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="causes causes-2 text-center ftco-animate">
-            <div class="img" style="background-image: url(images/partners/GirlsWhoCode.jpg);"></div>
-            <h2>Girls Who Code</h2>
-            <p>Community Partner</p>
-
-
-
-          </div>
+      <div class="row justify-content-center pb-4">
+        <div class="col-md-10 heading-section text-center ftco-animate">
+          <h2 class="mb-4">Our Partners</h2>
         </div>
-        <div class="col-md-4">
-          <div class="causes causes-2 text-center ftco-animate">
-            <div class="img" style="background-image: url(images/partners/DeveloperCirclesMoscowFromFacebook.jpg);">
-            </div>
-            <h2>Developer Circles Moscow from facebook</h2>
-            <p>Community Partner</p>
-
-
-
-          </div>
-        </div>
-
-
       </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="causes causes-2 text-center ftco-animate">
+            <div class="img img-fluid rounded-circle" style="background-image: url(images/partners/p1.png); width: 310px"></div>
+            <h2>Girls who code</h2>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="causes causes-2 text-center ftco-animate">
+            <div class="img img-fluid rounded-circle" style="background-image: url(images/partners/p2.jpg); width: 310px;"></div>
+            <h2>Developer Circle Mosco From Facebook</h2>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <footer class="ftco-footer ftco-section img" style="background-image: url(images/assets/footer.jpg);">
@@ -128,6 +124,10 @@
                   rel="noopener"><span class="icon-facebook"></span></a></li>
               <li class="ftco-animate"><a href="https://www.instagram.com/osdfs1" target="_blank" rel="noopener"><span
                     class="icon-instagram"></span></a></li>
+              <li class="ftco-animate"><a href="#" target="_blank" rel="noopener"><span
+                    class="fab fa-slack"></span></a></li>
+              <li class="ftco-animate"><a href="#" target="_blank" rel="noopener"><span
+                    class="icon-github"></span></a></li>
             </ul>
           </div>
         </div>
