--- a/partners.html
+++ b/partners.html
@@ -126,7 +126,7 @@
                     class="icon-instagram"></span></a></li>
               <li class="ftco-animate"><a href="#" target="_blank" rel="noopener"><span
                     class="fab fa-slack"></span></a></li>
-              <li class="ftco-animate"><a href="#" target="_blank" rel="noopener"><span
+               <li class="ftco-animate"><a href="https://github.com/osDFS/osDFS-V2" target="_blank" rel="noopener"><span
                     class="icon-github"></span></a></li>
             </ul>
           </div>
