--- a/JoiningForm.html
+++ b/JoiningForm.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="zJXW5CyXWp4AJYbT7zg2erDCY4tIEKqMA78km498pc0" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Join Us</title>
 
