--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:image" content="#" />
   <meta property="og:image:type" content="image/jpg" />
   <meta property="og:title" content="osDFS | Open Source Digital Freedom Society" />
-  <meta property="og:url" content=" https://www.osdfs.in/" />
+  <meta property="og:url" content=" https://osdfs.in/" />
   <meta property="og:type" content="website" />
 
 
