--- a/events.html
+++ b/events.html
@@ -111,45 +111,41 @@
 </div>
 <!-- END Banner -->
   
-  
-<!--Speakers Section begin-->
-<section class="speaker-section spad ftco-section speaker-all">
-  <div class="container">
-
 <!-- Event Counter Begin -->
-    <section class="event-counter">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="event-name">
-                        <h2>Next Event</h2>
-                        <h4>August 25, 2019 <span>Starting @ 09:00 AM</span></h4>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="countdown-timer" id="countdown">
-                        <div class="cd-item">
-                            <span>56</span>
-                            <p>Days</p>
-                        </div>
-                        <div class="cd-item">
-                            <span>12</span>
-                            <p>Hours</p>
-                        </div>
-                        <div class="cd-item">
-                            <span>40</span>
-                            <p>Minutes</p>
-                        </div>
-                        <div class="cd-item">
-                            <span>52</span>
-                            <p>Seconds</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<section class="event-counter">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-6">
+              <div class="event-name">
+                  <h2>Next Event</h2>
+                  <h4>August 25, 2019 <span>Starting @ 09:00 AM</span></h4>
+              </div>
+          </div>
+          <div class="col-lg-6">
+              <div class="countdown-timer" id="countdown">
+                  <div class="cd-item">
+                      <span>56</span>
+                      <p>Days</p>
+                  </div>
+                  <div class="cd-item">
+                      <span>12</span>
+                      <p>Hours</p>
+                  </div>
+                  <div class="cd-item">
+                      <span>40</span>
+                      <p>Minutes</p>
+                  </div>
+                  <div class="cd-item">
+                      <span>52</span>
+                      <p>Seconds</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
 <!-- Event Counter End -->
+
 <div class="padding"></div>
   <!--? Categories Area Start -->
     <div  class="categories-area section-padding" >
@@ -185,27 +181,44 @@
 <!-- Area End -->
     
 <!-- Workshop Begin -->
-<section class="spotlights">
-								<section>
-									<a href="#" class="image">
-										<img src="images/assets/event-main.jpg" alt="" data-position="center center" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h1 style="text-decoration: underline;">Upcoming Event</h1>
-											</header>
-                                            <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
-                                            <ul class="actions">
-												<li><a href="#" class="button">Learn more</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-</section>
+<!-- <section class="spotlights">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-5">
+        <a href="#" class="image">
+          <img src="images/assets/event-main.jpg" alt="" data-position="center center" />
+        </a>
+      </div>
+      <div class="col-md-7">
+        <div class="content">
+          <div class="inner">
+            <header class="major">
+              <h1 style="text-decoration: underline;">Upcoming Event</h1>
+            </header>
+              <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
+              <ul class="actions">
+              <li><a href="#" class="button">Learn more</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section> -->
 <!-- Workshop End -->
-
-         <div class="col-lg-4 col-md-6">
+  
+<!--Speakers Section begin-->
+<section class="speaker-section spad ftco-section speaker-all">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-12">
+              <div class="ftco-heading-2">
+                  <h2 class="pb-5" style="text-align: center;font-size: 2.4em; font-weight: 600;">Present Speakers</h2>
+              </div>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-4 col-md-6">
               <div class="speakers-about">
                   <div class="speaker-img">
                       <img src="images/speakers/Gianluca Detommaso.jpg" alt="">
