--- a/events.html
+++ b/events.html
@@ -196,9 +196,22 @@
 											</header>
                                             <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
                                             <ul class="actions">
-												<li><a href="#" class="button">Learn more</a></li>
+												<li><a class="button" onclick="openForm()">Learn more</a></li>
 											</ul>
 										</div>
+                                        <div class="form-popup" id="myForm">
+                                        <form action="" class="form-container">
+                                        <h1 style="text-decoration: underline;">Register</h1>
+                                        <label for="email"><b>Email</b></label>
+                                        <input type="text" placeholder="Enter Email" name="email" required>
+                                        <label for="psw"><b>Password</b></label>
+                                        <input type="password" placeholder="Enter Password" name="psw" required>
+                                        <label for="college"><b>College</b></label>
+                                        <input type="text" placeholder="Enter College" name="college" required>
+                                        <button type="submit" class="btn">Login</button>
+                                        <button type="submit" class="btn cancel" onclick="closeForm()">Close</button>
+                                       </form>
+                                       </div>
 									</div>
 								</section>
 </section>
@@ -299,6 +312,16 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script>
+function openForm() {
+  document.getElementById("myForm").style.display = "block";
+}
+
+function closeForm() {
+  document.getElementById("myForm").style.display = "none";
+}
+</script>
+
   <script src="js/scripts/jquery.min.js"></script>
   <script src="js/scripts/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/scripts/popper.min.js"></script>
