--- a/events.html
+++ b/events.html
@@ -194,7 +194,7 @@
 											</header>
                                             <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
                                             <ul class="actions">
-												<li><a class="button" onclick="openForm()">Learn more</a></li>
+												<li><a class="button" onclick="openForm()">Register</a></li>
 											</ul>
 										</div>
                                         <div class="form-popup" id="myForm">
@@ -206,7 +206,7 @@
                                         <input type="password" placeholder="Enter Password" name="psw" required>
                                         <label for="college"><b>College</b></label>
                                         <input type="text" placeholder="Enter College" name="college" required>
-                                        <button type="submit" class="btn">Login</button>
+                                        <button type="submit" class="btn">Register</button>
                                         <button type="submit" class="btn cancel" onclick="closeForm()">Close</button>
                                        </form>
                                        </div>
