--- a/ccp.html
+++ b/ccp.html
@@ -50,7 +50,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container-fluid px-lg-5">
-      <a class="navbar-brand" href="index.html" style="text-decoration:none;">OSDFS</a>
+      <a class="navbar-brand" href="index.html">OSDFS</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
         aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> Menu
