--- a/ccp.html
+++ b/ccp.html
@@ -50,7 +50,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container-fluid px-lg-5">
-      <a class="navbar-brand" href="index.html">OSDFS</a>
+      <a class="navbar-brand" href="index.html" style="text-decoration:none;">OSDFS</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
         aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> Menu
@@ -158,7 +158,7 @@
 2. How can apply for being the campus ambassador of OSDFS?
   </label>
   <div class="answers">
-    <p>You can apply through our website her itself(the form is attached below).</p>
+    <p>You can apply through our website. Follow the <a href="#ccpform">JOIN NOW</a>.</p>
     
   </div>
 </div>
