events page backend

--- a/ccp.html
+++ b/ccp.html
@@ -231,29 +231,29 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="name">Name</label>
-      <input type="text"  name="entry.282853232" id="name" class="form-control" placeholder="Name" >
+      <input type="text"  name="entry.282853232" id="name" class="form-control" placeholder="Name" required>
     </div>
     <div class="form-group col-md-6">
       <label for="Email">Email</label>
-      <input type="email" name="entry.1447727087" id="Email" class="form-control" placeholder="Email" >
+      <input type="email" name="entry.1447727087" id="Email" class="form-control" placeholder="Email" required>
     </div>
   </div>
   <div class="form-group">
     <label for="college">College</label>
-    <input type="text" name="entry.647663452" id="College" class="form-control" placeholder="College">
+    <input type="text" name="entry.647663452" id="College" class="form-control" placeholder="College" required>
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="branch">Your course with specialisation</label>
-      <input type="text" name="entry.124109048" id="branch" class="form-control">
+      <input type="text" name="entry.124109048" id="branch" class="form-control" required>
     </div>
     <div class="form-group col-md-4">
       <label for="github">Github ID</label>
-      <input id="inputState" name="entry.680399955" id="github" class="form-control">
+      <input id="inputState" name="entry.680399955" id="github" class="form-control" required>
     </div>
     <div class="form-group col-md-2">
       <label for="year">Year of Graduation</label>
-    <input type="text" name="entry.1821937184" id="year" class="form-control">
+    <input type="text" name="entry.1821937184" id="year" class="form-control" required>
     </div>
   </div>
   <div class="form-group">
@@ -265,6 +265,7 @@
     <textarea name="entry.1652045175" id="exampleFormControlTextarea2" rows="5" class="form-control"></textarea>
       <div  class="text-center" style="margin-top: 20px;">
   <button type="submit" class="btn btn-primary" >Submit the form</button>
+  <button type="reset" class="btn btn-primary" >Reset</button>
     </div>
     </div>
 </form>
