--- a/events.html
+++ b/events.html
@@ -117,26 +117,26 @@
       <div class="row">
           <div class="col-lg-6">
               <div class="event-name">
-                  <h2>Next Event</h2>
-                  <h4>August 25, 2019 <span>Starting @ 09:00 AM</span></h4>
+                  <h2>Deep Learning Meetup</h2>
+                  <h4>To Be Decided<span>Starting @ TBD</span></h4>
               </div>
           </div>
           <div class="col-lg-6">
               <div class="countdown-timer" id="countdown">
                   <div class="cd-item">
-                      <span>56</span>
+                      <span>TBD</span>
                       <p>Days</p>
                   </div>
                   <div class="cd-item">
-                      <span>12</span>
+                      <span>TBD</span>
                       <p>Hours</p>
                   </div>
                   <div class="cd-item">
-                      <span>40</span>
+                      <span>TBD</span>
                       <p>Minutes</p>
                   </div>
                   <div class="cd-item">
-                      <span>52</span>
+                      <span>TBD</span>
                       <p>Seconds</p>
                   </div>
               </div>
@@ -154,24 +154,24 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-cat text-center mb-50">
                         <div >
-                            <h3 style="color: blue;">Sub Heading 1</h3>
-                             <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
+                            <h3 style="color: blue;">I Am AI</h3>
+                             <p>I am a Visionary, a Healer, a Creator, and so much more. Through a convergence of technology leaps, social transformations, and genuine economic needs, AI is moving from its academic roots to the forefront of business and industry.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-cat text-center mb-50">
                         <div >
-                            <h3 style="color: blue;">Sub Heading 2</h3>
-                            <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
+                            <h3 style="color: blue;">Realized With AI</h3>
+                            <p>Preventing disease. Building smart cities. Revolutionizing analytics. These are just a few things happening today with AI and, specifically, deep learning. Today, it’s empowering organizations to transform moonshots into real results.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-cat text-center mb-50">
                         <div >
-                            <h3 style="color: blue;">Sub Heading 3</h3>
-                            <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
+                            <h3 style="color: blue;">The Faces of AI</h3>
+                            <p>Learn what fuels the elite thinkers of today. This <a href="https://www.instagram.com/nvidiaai/" target="_blank" rel="noopener">series</a> spotlights the rising stars of AI in “their own words.” From childhood dreams to recent accomplishments, they give you an inside look at what motivates them to do their best work. </p>
                         </div>
                     </div>
                 </div>
@@ -266,24 +266,24 @@
               </div>
           </div>
           <div class="col-lg-4 col-md-6">
-              <div class="speakers-about">
-                  <div class="speaker-img">
-                      <img src="images/speakers/Jay Nanavati.jpg" alt="">
-                  </div>
-                  <div class="speaker-text">
-                      <h3>Jay Nanavati <span>Machine Learning Engineer at Microsoft</span></h3>
-                  </div>
-              </div>
+            <div class="speakers-about">
+                <div class="speaker-img">
+                    <img src="images/speakers/Eliya Nachmani.jpg" alt="">
+                </div>
+                <div class="speaker-text">
+                    <h3>Eliya Nachmani <span>PhD, Facebook AI Research</span></h3>
+                </div>
+            </div>
           </div>
           <div class="col-lg-4 col-md-6">
-              <div class="speakers-about">
-                  <div class="speaker-img">
-                      <img src="images/speakers/Moni Shahar.jpg" alt="">
-                  </div>
-                  <div class="speaker-text">
-                      <h3>Moni Shahar <span>Machine Learning Engineer at Facebook</span></h3>
-                  </div>
-              </div>
+            <div class="speakers-about">
+                <div class="speaker-img">
+                    <img src="images/speakers/Danya Chepenko.jpg" alt="">
+                </div>
+                <div class="speaker-text">
+                    <h3>Danya Chepenko <span>Data Science, Yahoo Japan</span></h3>
+                </div>
+            </div>
           </div>
           <div class="col-lg-4 col-md-6">
               <div class="speakers-about">
