--- a/events.html
+++ b/events.html
@@ -194,7 +194,7 @@
 											</header>
                                             <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
                                             <ul class="actions">
-												<li><a class="button" onclick="openForm()" style="color: floralwhite;">Learn more</a></li>
+												<li><a class="button" onclick="openForm()" style="color: floralwhite;">Register Here</a></li>
 											</ul>
 										</div>
                                         <div class="form-popup" id="myForm">
