added event content

--- a/events.html
+++ b/events.html
@@ -196,9 +196,9 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h1 style="text-decoration: underline;">Upcoming Event</h1>
+												<h1 style="text-decoration: underline;">Deep Learning Meetup </h1>
 											</header>
-                                            <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
+                                            <p>The aim of this meetup is to bring together people interested in the family of machine learning methods that are concerned with learning distributed, hierarchical ("deep") representations.The format will be based around guest speakers sharing new research ideas and applications covering a wide range of fields from computer vision and natural language processing to autonomous systems and prognostics.Entrepreneurs, working professionals, students, academicians, investors, and just about anyone who is interested in Deep Learning is invited.This Meetup will serve to be an open platform for people to share knowledge, practices, research, applications and critiques of deep learning.If interested, Register now. </p>
                                             <ul class="actions">
 												<li><a class="button" onclick="openForm()" style="color: floralwhite;">Register Here</a></li>
 											</ul>
