Added preloader on every page

--- a/blog.html
+++ b/blog.html
@@ -26,24 +26,50 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css" integrity="sha512-3PN6gfRNZEX4YFyz+sIyTF6pGlQiryJu9NlGhu9LrLMQ7eDjNgudQoFDK3WSNAayeIKc6B8WXXpo4a7HqxjKwg==" crossorigin="anonymous" />  <link rel="stylesheet" href="css/loadingAnimation.css">
   <link rel="stylesheet" href="css/bootstrap/open-iconic-bootstrap.min.css">
+  <link rel="stylesheet" href="css/loadingAnimation.css">
   <link rel="stylesheet" href="css/libraries/animate.css">
 
   <link rel="stylesheet" href="css/libraries/owl.carousel.min.css">
   <link rel="stylesheet" href="css/libraries/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
 
-  <link rel="stylesheet" href="css/aos.css">
-
   <link rel="stylesheet" href="css/ionicons.min.css">
-
-  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="css/jquery.timepicker.css">
 
-
-  <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/icomoon.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
+<!-- Loading Animation -->
+<div id="loaderAnim">
+  <div class="boxes">
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
+</div>
+<!--End loading Animation-->
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -320,6 +346,7 @@
   <script src="js/scripts/aos.js"></script>
   <script src="js/scripts/jquery.animateNumber.min.js"></script>
   <script src="js/scripts/scrollax.min.js"></script>
+  <script src="js/removingLoader.js"></script>
   <!-- <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/scripts/google-map.js"></script> -->
