--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,7 @@
   <link rel="stylesheet" href="css/libraries/animate.css">
   <link rel="stylesheet" href="css/libraries/owl.carousel.min.css">
   <link rel="stylesheet" href="css/libraries/owl.theme.default.min.css">
+  <link rel="stylesheet" href="css/loadingAnimation.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/ionicons.min.css">
@@ -38,6 +39,37 @@
   <link rel="stylesheet" href="css/icomoon.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
+<!-- Loading Animation -->
+<div id="loaderAnim">
+  <div class="boxes">
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
+</div>
+<!--End loading Animation-->
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -256,6 +288,7 @@
   <script src="https://smtpjs.com/v3/smtp.js"></script>
   <script src="js/contact-mail.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/removingLoader.js"></script>
   <!-- <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZtlFBxRugQA-2CZ69p7GUQJEjLy9ITWQ&sensor=false"></script>
   <script src="js/scripts/google-map.js"></script> -->
