--- a/events.html
+++ b/events.html
@@ -30,6 +30,7 @@
   
     <link rel="stylesheet" href="css/libraries/owl.carousel.min.css">
     <link rel="stylesheet" href="css/libraries/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/loadingAnimation.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
   
     <link rel="stylesheet" href="css/ionicons.min.css">
@@ -46,6 +47,37 @@
   <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/community.css">
   </head>
+
+<!-- Loading Animation -->
+<div id="loaderAnim">
+  <div class="boxes">
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
+</div>
+<!--End loading Animation-->
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -541,6 +573,7 @@ function closeForm() {
   <script src="js/scripts/aos.js"></script>
   <script src="js/scripts/jquery.animateNumber.min.js"></script>
   <script src="js/scripts/scrollax.min.js"></script>
+  <script src="js/removingLoader.js"></script>
   <!-- <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/scripts/google-map.js"></script> -->
