Added meta tags in Joining form

--- a/JoiningForm.html
+++ b/JoiningForm.html
@@ -2,13 +2,24 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Join Us</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="/images/favicon.ico" />
+    <meta name="keywords"
+        content="osDFS, Open Source, Digital Freedom Society, Men, Women, Technology, Computer Science, Information Science" />
+    <meta name="author" content="osDFS" />
+    <meta name="description"
+        content="We are an off campus community that supports men & women that are interested in computer and information science and all things tech." />
+    <meta property="og:description"
+        content="We are an off campus community that supports men & women that are interested in computer and information science and all things tech." />
     <meta name="google-site-verification" content="zJXW5CyXWp4AJYbT7zg2erDCY4tIEKqMA78km498pc0" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Join Us</title>
-
+    <meta property="og:image" content="#" />
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:title" content="osDFS | Open Source Digital Freedom Society" />
+    <meta property="og:url" content=" https://osdfs.in/" />
+    <meta property="og:type" content="website" />
 
     <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="css/JoiningForm.css">
